--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap icons cdn-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-    <link rel="shortcut icon" href="./images/ansu-logo.png" type="image/x-icon">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
+    />
+    <link
+      rel="shortcut icon"
+      href="./images/ansu-logo.png"
+      type="image/x-icon"
+    />
     <title>QR-code</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-
     <div class="desc">
-        <h1>
-            This  wep Application allows <br> you to Generate a <span>QR</span> code <br> for any text or URL 
-        </h1>
+      <h1>
+        This wep Application allows <br />
+        you to Generate a <span>QR</span> code <br />
+        for any text or URL
+      </h1>
     </div>
-    
 
     <div class="container">
       <p>Enter your text or URL</p>
@@ -28,22 +35,36 @@
     </div>
 
     <footer>
+      <div>
         <div>
-            <div>
-                <h1>Find me on </h1>
-            </div>
-            <div>
-                <ul>
-                    <li><a href="https://www.linkedin.com/in/ansu-badjie-3a979b280/" target="_blank"><i class="bi bi-linkedin"></i></a></li>
-                    <li><a href="https://github.com/ansuofficial" target="_blank"><i class="bi bi-github"></i></a></li>
-                    <li><a href="https://www.instagram.com/ansu.developer/" target="_blank"><i class="bi bi-instagram"></i></a></li>
-                </ul>
-            </div>
+          <h1>Find me on</h1>
         </div>
+        <div>
+          <ul>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/ansu-badjie-3a979b280/"
+                target="_blank"
+                ><i class="bi bi-linkedin"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://github.com/ansuofficial" target="_blank"
+                ><i class="bi bi-github"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/ansu.developer/"
+                target="_blank"
+                ><i class="bi bi-instagram"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
 
-    <script>
-      
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
